enrollment api issues fixed and swagger updated
